Adjust bubble size based on anchor position

Bug: 858957
Test: manually verified |max_height| in the changed line gives same value as before in the horizontal shelf mode. Also the bubble fits in screen with docked magnifier turned on.
Change-Id: Ia40179b8842f8ececd5f1d0e96e851493b1a378b
Reviewed-on: https://chromium-review.googlesource.com/1131043
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573671}
Former-commit-id: 7e72f7b0aa7a882b75a8f4b1d6b1ce03520ecf80